other-vpol/require-container-port-names/require-container-port-names.yaml
apiVersion: policies.kyverno.io/v1
kind: ValidatingPolicy
metadata:
  name: require-container-port-names
  annotations:
    policies.kyverno.io/title: Require Container Port Names in ValidatingPolicy
    policies.kyverno.io/category: Other in Vpol 
    policies.kyverno.io/severity: medium
    kyverno.io/kyverno-version: 1.14.0
    kyverno.io/kubernetes-version: "1.30"
    policies.kyverno.io/subject: Pod
    policies.kyverno.io/description: >-
      Containers may define ports on which they listen. In addition to a port number,
      a name field may optionally be used. Including a name makes it easier when defining
      Service resource definitions and others since the name may be referenced allowing
      the port number to change. This policy requires that for every containerPort defined
      there is also a name specified.      
spec:
  validationActions:
    - Audit
  evaluation:
    background:
      enabled: true
  matchConstraints:
    resourceRules:
    - apiGroups:   [""]
      apiVersions: ["v1"]
      operations:  ["CREATE", "UPDATE"]
      resources:   ["pods"]
  variables:
    - name: allContainers
      expression: "object.spec.containers + object.spec.?initContainers.orValue([]) + object.spec.?ephemeralContainers.orValue([])"
  validations:
    - expression: "variables.allContainers.all(container, container.?ports.orValue([]).all(port, has(port.name) && port.name != ''))"
      message: Name is required for every containerPort.
